--- a/Loto/res/layout/activity_get_loto.xml
+++ b/Loto/res/layout/activity_get_loto.xml
@@ -3,29 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_world"
-        tools:context=".GetLoto" />
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="29dp"
-        android:onClick="RandomMe"
-        android:text="Click me" />
-
     <LinearLayout
         android:id="@+id/linear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/button1"
         android:layout_marginLeft="31dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="33dp"
@@ -33,7 +15,17 @@
         android:gravity="center_horizontal|center"
         android:orientation="horizontal"
         android:showDividers="middle" >
-
     </LinearLayout>
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/linear"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="60dp"
+        android:onClick="RandomMe"
+        android:text="שקשק מספרים"
+        android:width="260dip" />
 
 </RelativeLayout>
